[package]
name = "libp2p-swap-agent"
version = "0.1.0"
edition = "2021"
description = "libp2p agents coordinating Uniswap V4 swaps"
license = "MIT"

[dependencies]
# libp2p for P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "quic",
    "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Ethereum interaction
alloy = { version = "0.3", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client (sidecar communication)
reqwest = { version = "0.12", features = ["json"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"
